# VIKI

./: FRONTEND_PROMPT.md  README.md
company-brain/: .env.example  .gitignore  README.md  pyproject.toml
company-brain-v2/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
company-brain-v2/alembic/: env.py
company-brain-v2/alembic/versions/: 001_initial_schema.py  002_bm25_tsvector.py  003_vc_tables.py
company-brain-v2/app/: __init__.py  main.py
company-brain-v2/app/api/: __init__.py  deps.py  errors.py  routes_ask.py  routes_context.py  routes_health.py  routes_ingest.py  routes_memory.py  routes_ui.py  routes_vc.py  schemas.py
company-brain-v2/app/connectors/: __init__.py  base.py  gmail.py  notion.py
company-brain-v2/app/context/: __init__.py  base.py  provider.py
company-brain-v2/app/core/: __init__.py  config.py  dedup.py  exceptions.py  logging.py  query_rewriter.py  reranker.py  source_weights.py  temporal.py
company-brain-v2/app/db/: __init__.py  engine.py  models.py  retriever.py  vc_repo.py  vc_repo_sql.py
company-brain-v2/app/eval/: __init__.py  fixtures.py  golden.py  metrics.py  runner.py  seed.py
company-brain-v2/app/graphs/: __init__.py  context_graph.py  ingestion_graph.py  pipeline_graph.py  state.py
company-brain-v2/app/graphs/nodes/: classify.py  dedupe.py  extract.py  write.py
company-brain-v2/app/ingestion/: __init__.py  base.py  llm_extractor.py  orchestrator.py  passthrough.py
company-brain-v2/app/llm/: __init__.py  base.py  fake.py  openai.py
company-brain-v2/app/memory/: __init__.py  base.py  factory.py  in_memory.py  pgvector.py
company-brain-v2/app/middleware/: __init__.py  rate_limit.py  tenant.py
company-brain-v2/app/models/: __init__.py  common.py  documents.py  facts.py  memory.py  results.py  retrieval.py  vc.py
company-brain-v2/app/prompts/: __init__.py  ask.py  classification.py  extraction.py
company-brain-v2/app/scheduler/: __init__.py  cron.py
company-brain-v2/app/scoring/: __init__.py  founder.py
company-brain-v2/app/services/: __init__.py  container.py  health.py  interfaces.py  retrieval.py
company-brain-v2/app/utils/: __init__.py  ids.py
company-brain-v2/demo/: demo_output.json  demo_script.py
company-brain-v2/docs/: architecture.md
company-brain-v2/eval_results/: 2026-06-19_09-02.json  2026-06-19_14-01.json
company-brain-v2/scripts/: check_dupes.py  check_inbound.py  run_api.sh  run_full_demo.sh  run_ingestion.py  setup_dev.sh  smoke.py  wipe_and_count.py
company-brain-v2/tests/: conftest.py  test_ask_pipeline.py  test_config.py  test_connectors.py  test_context_graph.py  test_deduplication.py  test_founder_scorer.py  test_health.py  test_hybrid_retrieval.py  test_middleware.py  test_models.py  test_pipeline.py  test_pipeline_graph.py  test_query_rewriter.py  test_temporal.py  test_vc_extraction.py  test_vc_ingestion.py  test_vc_routes.py
company-brain/scripts/: run_ingestion.py  setup_gbrain.sh
company-brain/src/: config.py
company-brain/src/api/: main.py
company-brain/src/connectors/: base.py  gmail.py  notion.py
company-brain/src/gbrain_client/: context_injector.py  mcp_client.py  page_builder.py
company-brain/src/pipeline/: graph.py  nodes.py  prompts.py  state.py
company-brain/src/scheduler/: cron.py
company-brain/tests/: test_connectors.py  test_gbrain_client.py  test_pipeline.py
